ajust methods find
