# app/Http/Controllers/Api/PersonController.php
@@ -40,4 +40,43 @@ class PersonController extends Controller
         }
         return response()->json(['person' => $data]);
     }
+
+
+    /**
+     * @OA\Get(
+     *  path="/api/person/{id}",
+     *  tags={"protected"},
+     *   @OA\Parameter(
+     *      name="id",
+     *      in="path",
+     *      description="id",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *  summary="Json of persons",
+     *  @OA\Response(response=200, description="successful operation"),
+     *  @OA\Response(response=401, description="Authorization Token not found"),
+     *  @OA\Response(response=404, description="Person not found"),
+     *  @OA\Response(response=500, description="internal server error"),
+     *  security={{ "apiAuth": {} }}
+     * )
+     */
+    public function find($id)
+    {
+        try {
+            $value = $this->person->find($id);
+            $data[] =
+            [
+                'personid'      =>  $value->personid,
+                'personname'    =>  $value->personname,
+                'phones'        =>  json_decode($value->phones, true)
+            ];
+            return response()->json(['person' => $data]);
+
+        } catch (\Throwable $th) {
+            return response()->json('Not found id', 404);
+        }
+    }
 }
